@@ -2,12 +2,18 @@
 #
 #
 . ../BASEFILES
-cc -g -I $libdw/libdwarf  dwarfextract.c -o dwarfextract -L ../libdwarf -ldwarf -lelf
+cc -g -I $libdw/libdwarf  dwarfextract.c -o dwarfextract -L ../ -ldwarf -lelf
 cc -g test1.c test2.c -o test1
-./dwarfextract test1 test1out
+./dwarfextract test1 test1out >basestdout
 if [  $?  -ne 0 ] 
 then
     echo FAIL dwarfextract
+    exit 1
+fi
+diff basestdout basestdout.base
+if [  $?  -ne 0 ] 
+then
+    echo FAIL dwarfextract dwex-1
     exit 1
 fi
 ../dwarfdump -a test1out >test1.new
@@ -16,15 +22,20 @@ if [  $?  -ne 0 ]
 then
     echo FAIL dwarfextract
     exit 1
-else
-    echo PASS dwarfextract
 fi
+echo PASS dwarfextract
 
-cc -g -DDWARF_PRODUCER_C=1 -I $libdw/libdwarf  dwarfextract.c -o dwarfextractc -L ../libdwarf -ldwarf -lelf
-./dwarfextractc test1 testcout
+cc -g -DPRODUCER_INIT_C=1 -I $libdw/libdwarf  dwarfextract.c -o dwarfextractc -L .. -ldwarf -lelf
+./dwarfextractc test1 testcout >basecstdout
 if [  $?  -ne 0 ]
 then
     echo FAIL dwarfextract c
+    exit 1
+fi
+diff basecstdout basecstdout.base
+if [  $?  -ne 0 ] 
+then
+    echo FAIL dwarfextract dwexc-1
     exit 1
 fi
 ../dwarfdump -a testcout >testc.new
@@ -33,9 +44,6 @@ if [  $?  -ne 0 ]
 then
     echo FAIL dwarfextract c
     exit 1
-else
-    echo PASS dwarfextract c
 fi
-
-
+echo PASS dwarfextract c
 exit 0
